--- a/1-infra/.gitignore
+++ b/1-infra/.gitignore
@@ -1,5 +1,6 @@
-.terraform.lock.hcl
 .terraform/providers
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
 terraform.tfvars
 terraform.tfstate
 terraform.tfstate.backup
