--- a/2-config/Makefile
+++ b/2-config/Makefile
@@ -1,11 +1,15 @@
 PREFIX?=$(shell echo ${USER})-learn-k8s
 
 CA = ca.pem ca-key.pem
-COMPONENTS = \
+COMPONENT_CERTIFICATES = \
 	admin.pem admin-key.pem  \
 	kube-controller-manager.pem kube-controller-manager-key.pem \
 	kube-proxy.pem kube-proxy-key.pem \
 	kube-scheduler.pem kube-scheduler-key.pem
+COMPONENT_KUBECONFIGS = \
+	kube-proxy.kubeconfig \
+	kube-controller-manager.kubeconfig \
+	kube-scheduler.kubeconfig
 WORKER_CERTIFICATES = \
 	worker-0.pem worker-0-key.pem \
 	worker-1.pem worker-1-key.pem \
@@ -14,18 +18,20 @@ WORKER_KUBECONFIGS = \
 	worker-0.kubeconfig \
 	worker-1.kubeconfig \
 	worker-2.kubeconfig
-CONTROLLERS_CERTIFICATES = \
+CONTROLLER_CERTIFICATES = \
 	kubernetes.pem kubernetes-key.pem \
 	service-account.pem service-account-key.pem
+CONTROLLER_KUBECONFIGS = \
+	admin.kubeconfig
 
 
-KUBERNETES_REGION := $(shell gcloud config get-value compute/region)
+KUBERNETES_REGION := $(shell echo "now" && gcloud config get-value compute/region)
 KUBERNETES_PUBLIC_ADDRESS := $(shell gcloud compute addresses describe ${PREFIX}-kubernetes-the-hard-way --region ${KUBERNETES_REGION} --format 'value(address)')
 KUBERNETES_HOSTNAMES := "kubernetes,kubernetes.default,kubernetes.default.svc,kubernetes.default.svc.cluster,kubernetes.svc.cluster.local"
 
 
 .PHONY: all
-all: $(COMPONENTS) upload-worker-keys upload-controller-keys $(WORKER_KUBECONFIGS)
+all: upload-worker-keys upload-worker-kubeconfig upload-controller-keys upload-controller-kubeconfigs
 
 .PHONY: clean
 clean:
@@ -76,16 +82,59 @@ kube-scheduler-key.pem: $(CA) kube-scheduler-csr.json
 	  kube-scheduler-csr.json | cfssljson -bare kube-scheduler
 kube-scheduler.pem: kube-scheduler-key.pem
 
+kube-proxy.kubeconfig: ${COMPONENT_CERTIFICATES}
+	@ kubectl config set-cluster kubernetes-the-hard-way \
+		    --certificate-authority=ca.pem \
+		    --embed-certs=true \
+		    --server=https://${KUBERNETES_PUBLIC_ADDRESS}:6443 \
+		    --kubeconfig=kube-proxy.kubeconfig ;\
+		kubectl config set-credentials system:kube-proxy \
+		    --client-certificate=kube-proxy.pem \
+		    --client-key=kube-proxy-key.pem \
+		    --embed-certs=true \
+		    --kubeconfig=kube-proxy.kubeconfig ;\
+		kubectl config set-context default \
+		    --cluster=kubernetes-the-hard-way \
+		    --user=system:kube-proxy \
+		    --kubeconfig=kube-proxy.kubeconfig ;\
+		kubectl config use-context default --kubeconfig=kube-proxy.kubeconfig
+
+kube-controller-manager.kubeconfig: $(COMPONENT_CERTIFICATES) 
+	@ kubectl config set-cluster kubernetes-the-hard-way \
+		    --certificate-authority=ca.pem \
+		    --embed-certs=true \
+		    --server=https://127.0.0.1:6443 \
+		    --kubeconfig=kube-controller-manager.kubeconfig ;\
+		kubectl config set-credentials system:kube-controller-manager \
+		    --client-certificate=kube-controller-manager.pem \
+		    --client-key=kube-controller-manager-key.pem \
+		    --embed-certs=true \
+		    --kubeconfig=kube-controller-manager.kubeconfig ;\
+	 	kubectl config set-context default \
+		    --cluster=kubernetes-the-hard-way \
+		    --user=system:kube-controller-manager \
+		    --kubeconfig=kube-controller-manager.kubeconfig ;\
+	 	kubectl config use-context default --kubeconfig=kube-controller-manager.kubeconfig
+
+kube-scheduler.kubeconfig: $(COMPONENT_CERTIFICATES)
+	@ kubectl config set-cluster kubernetes-the-hard-way \
+		    --certificate-authority=ca.pem \
+		    --embed-certs=true \
+		    --server=https://127.0.0.1:6443 \
+		    --kubeconfig=kube-scheduler.kubeconfig ;\
+		kubectl config set-credentials system:kube-scheduler \
+		    --client-certificate=kube-scheduler.pem \
+		    --client-key=kube-scheduler-key.pem \
+		    --embed-certs=true \
+		    --kubeconfig=kube-scheduler.kubeconfig ;\
+		kubectl config set-context default \
+		    --cluster=kubernetes-the-hard-way \
+		    --user=system:kube-scheduler \
+		    --kubeconfig=kube-scheduler.kubeconfig ;\
+		kubectl config use-context default --kubeconfig=kube-scheduler.kubeconfig
+
 
 # === Workers ===
-.PHONY: upload-worker-keys
-upload-worker-keys: upload-worker-keys-0 upload-worker-keys-1 upload-worker-keys-2
-
-.PHONY: upload-worker-keys-%
-upload-worker-keys-%: $(WORKER_CERTIFICATES)
-	@ INSTANCE='worker-$*' ;\
-		gcloud compute scp ca.pem $${INSTANCE}-key.pem $${INSTANCE}.pem ${PREFIX}-$${INSTANCE}:~/
-
 worker-%-key.pem: $(CA) worker-%-csr.json
 	@ WORKER='worker-$*' ;\
 		EXTERNAL_IP=$$(gcloud compute instances describe ${PREFIX}-$${WORKER} --format 'value(networkInterfaces[0].accessConfigs[0].natIP)') ;\
@@ -101,7 +150,15 @@ worker-0.pem: worker-0-key.pem
 worker-1.pem: worker-1-key.pem
 worker-2.pem: worker-2-key.pem
 
-worker-%.kubeconfig: ${CA} $(WORKER_CERTIFICATES)
+.PHONY: upload-worker-keys-%
+upload-worker-keys-%: $(WORKER_CERTIFICATES)
+	@ INSTANCE='worker-$*' ;\
+		gcloud compute scp ca.pem $${INSTANCE}-key.pem $${INSTANCE}.pem ${PREFIX}-$${INSTANCE}:~/
+
+.PHONY: upload-worker-keys
+upload-worker-keys: upload-worker-keys-0 upload-worker-keys-1 upload-worker-keys-2
+
+worker-%.kubeconfig: $(WORKER_CERTIFICATES)
 	@ WORKER='worker-$*' ;\
 		kubectl config set-cluster kubernetes-the-hard-way \
 		    --certificate-authority=ca.pem \
@@ -119,16 +176,16 @@ worker-%.kubeconfig: ${CA} $(WORKER_CERTIFICATES)
 		    --kubeconfig=kube-proxy.kubeconfig ;\
 		kubectl config use-context default --kubeconfig=kube-proxy.kubeconfig
 
+.PHONY: upload-worker-kubeconfig-%
+upload-worker-kubeconfig-%: $(WORKER_KUBECONFIGS) ${COMPONENT_KUBECONFIGS}
+	@ INSTANCE='worker-$*' ;\
+		gcloud compute scp $${INSTANCE}.kubeconfig kube-proxy.kubeconfig ${PREFIX}-$${INSTANCE}:~/
+
+.PHONY: upload-worker-kubeconfig
+upload-worker-kubeconfig: upload-worker-kubeconfig-0 upload-worker-kubeconfig-1 upload-worker-kubeconfig-2
+
+
 # === Controllers ===
-.PHONY: upload-controller-keys
-upload-controller-keys: upload-controller-keys-0 upload-controller-keys-1 upload-controller-keys-2
-
-.PHONY: upload-controller-keys-%
-upload-controller-keys-%: $(CONTROLLERS_CERTIFICATES)
-	@ INSTANCE='controller-$*' ;\
-		gcloud compute scp ca.pem ca-key.pem kubernetes-key.pem kubernetes.pem \
-    service-account-key.pem service-account.pem ${PREFIX}-$${INSTANCE}:~/
-
 service-account-key.pem: $(CA) service-account-csr.json
 	@ cfssl gencert \
 	  -ca=ca.pem \
@@ -147,3 +204,37 @@ kubernetes-key.pem: $(CA) kubernetes-csr.json
 		  -profile=kubernetes \
 		  kubernetes-csr.json | cfssljson -bare kubernetes
 kubernetes.pem: kubernetes-key.pem
+
+.PHONY: upload-controller-keys-%
+upload-controller-keys-%: $(CONTROLLER_CERTIFICATES)
+	@ INSTANCE='controller-$*' ;\
+		gcloud compute scp ca.pem ca-key.pem kubernetes-key.pem kubernetes.pem \
+    service-account-key.pem service-account.pem ${PREFIX}-$${INSTANCE}:~/
+
+.PHONY: upload-controller-keys
+upload-controller-keys: upload-controller-keys-0 upload-controller-keys-1 upload-controller-keys-2
+
+admin.kubeconfig:  $(CONTROLLER_CERTIFICATES)
+	@ kubectl config set-cluster kubernetes-the-hard-way \
+	    --certificate-authority=ca.pem \
+	    --embed-certs=true \
+	    --server=https://127.0.0.1:6443 \
+	    --kubeconfig=admin.kubeconfig ;\
+	kubectl config set-credentials admin \
+	    --client-certificate=admin.pem \
+	    --client-key=admin-key.pem \
+	    --embed-certs=true \
+	    --kubeconfig=admin.kubeconfig ;\
+	kubectl config set-context default \
+	    --cluster=kubernetes-the-hard-way \
+	    --user=admin \
+	    --kubeconfig=admin.kubeconfig ;\
+	kubectl config use-context default --kubeconfig=admin.kubeconfig
+
+.PHONY: upload-controller-kubeconfigs-%
+upload-controller-kubeconfigs-%: ${CONTROLLER_KUBECONFIGS} $(COMPONENT_KUBECONFIGS)
+	@ INSTANCE='controller-$*' ;\
+		gcloud compute scp admin.kubeconfig kube-controller-manager.kubeconfig kube-scheduler.kubeconfig ${PREFIX}-$${INSTANCE}:~/
+
+.PHONY: upload-controller-kubeconfigs
+upload-controller-kubeconfigs: upload-controller-kubeconfigs-0 upload-controller-kubeconfigs-1 upload-controller-kubeconfigs-2
